--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="navbar">
-                <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>
+                <a href="./index.html"><b>Home</b></a>
                 <a href="./about-us.html">About Us</a>
                 <a href="./problem.html">Societal Problem</a>
                 <a href="./deliverables.html">Deliverables</a>
@@ -101,7 +101,7 @@
     
         <footer>
             <br><br><hr>
-            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Return to homepage</b></a>
+            <a href="./index.html"><b>Return to homepage</b></a>
         </footer>
     </body>  
 </html>
