--- a/deliverables.html
+++ b/deliverables.html
@@ -40,6 +40,8 @@
             </tr>
         </table>
 
+        <hr>
+
 
         <h1>Major Functional Component Diagram</h1>
         <table>
@@ -51,6 +53,7 @@
             </tr>
         </table>
 
+        <hr>
 
         <h1>Competition Matrices</h1>
         <table>
@@ -72,6 +75,7 @@
             </tr>
         </table>
 
+        <hr>
 
         <h1>Risk Matrices</h1>
         <table>
@@ -171,6 +175,8 @@
             </tr>
         </table>
 
+        <hr>
+
         <h1>Mock Ups</h1>
         <table>
             <tr>
@@ -191,6 +197,69 @@
                 <td>
                     <h2>Add Task</h2>
                     <img src="./Pictures/Mockups/Add-Task.png" alt="Add Task">
+                </td>
+            </tr>
+        </table>
+
+        <hr>
+
+        <h1>Algorithms</h1>
+        <table>
+            <tr>
+                <td>
+                    <h2>Work Breakdown Structure</h2>
+                    <img src="./Pictures/Algorithms/WBS.png" alt="Work Breakdown Structure">
+                </td>
+                <td>
+                    <h2>Work Breakdown Structure: Preference Analysis</h2>
+                    <img src="./Pictures/Algorithms/WBS-PA.png" alt="Work Breakdown Structure: Preference Analysis">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h2>Profile Creation</h2>
+                    <img src="./Pictures/Algorithms/Profile.png" alt="Profile Creation">
+                </td>
+                <td>
+                    <h2>Notifications</h2>
+                    <img src="./Pictures/Algorithms/Notifications.png" alt="Notifications">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h2>Calendar Import</h2>
+                    <img src="./Pictures/Algorithms/Import.png" alt="Calendar Import">
+                </td>
+                <td>
+                    <h2>Calendar Export</h2>
+                    <img src="./Pictures/Algorithms/Export.png" alt="Calendar Export">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h2>Add Task</h2>
+                    <img src="./Pictures/Algorithms/Add-Task.png" alt="Add Task">
+                </td>
+                <td>
+                    <h2>Conflict Resolution</h2>
+                    <img src="./Pictures/Algorithms/Conflict.png" alt="Conflict Resolution">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <h2>Automated Schedule Creation</h2>
+                    <img style="width: 50%;" src="./Pictures/Algorithms/Automated-Creation.png" alt="Automated Schedule Creation">
+                </td>
+            </tr>
+        </table>
+
+        <hr>
+
+        <h1>Database Design</h1>
+        <table>
+            <tr>
+                <td>
+                    <img style="width:50%;" src="./Pictures/Database.png" alt="Database Design">
                 </td>
             </tr>
         </table>
