Added RWP vs Prototype

--- a/deliverables.html
+++ b/deliverables.html
@@ -263,6 +263,20 @@
                 </td>
             </tr>
         </table>
+
+        <hr>
+
+        <h1>Real World Product vs Prototype</h1>
+        <table>
+            <tr>
+                <td>
+                    <img src="./Pictures/RWP-vs-Prototype/Basic.png" alt="Basic Features">
+                </td>
+                <td>
+                    <img src="./Pictures/RWP-vs-Prototype/Automate-Custom-Priority.png" alt="Automation, Customization, and Prioritization Features">
+                </td>
+            </tr>
+        </table>
         
 
         <footer>
