--- a/deliverables.html
+++ b/deliverables.html
@@ -30,54 +30,57 @@
         <table>
             <tr>
                 <td>
-                    <h2>Current Process Flow</h2>
                     <img src="./Pictures/Process-Flows/Current.png"alt="Current Process Flow">
                 </td>
                 <td>
-                    <h2>Solution Process Flow</h2>
                     <img src="./Pictures/Process-Flows/Solution.png"alt="Solution Process Flow">
                 </td>
             </tr>
         </table>
 
+        <br>
         <hr>
+        <br>
 
-
-        <h1>Major Functional Component Diagram</h1>
         <table>
             <tr>
                 <td>
-                    
-                    <img style="width:50%;" src="./Pictures/MFCD.png"alt="Major Functional Component Diagram">
+                    <h1>Major Functional Component Diagram</h1>
+                    <img src="./Pictures/MFCD.png"alt="Major Functional Component Diagram">
+                </td>
+                <td>
+                    <h1>Database Design</h1>
+                    <img src="./Pictures/Database.png" alt="Database Design">
                 </td>
             </tr>
         </table>
 
+        <br>
         <hr>
+        <br>
 
         <h1>Competition Matrices</h1>
         <table>
             <tr>
                 <td colspan="2">
-                    <h2>Main Features</h2>
                     <img style="width:50%;" src="./Pictures/Competition/Main.png"alt="Competition Matrix: Main Features">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h2>Basic Features</h2>
                     <img src="./Pictures/Competition/Basic.png"alt="Competition Matrix: Basic Features">
                 </td>
                 <td>
-                    <h2>Prioritization Features</h2>
                     <img src="./Pictures/Competition/Priority.png"alt="Competition Matrix: Prioritization Features">
                 </td>
             </tr>
         </table>
 
+        <br>
         <hr>
+        <br>
 
-        <h1>Risk Matrices</h1>
+        <h1>Risks</h1>
         <table>
             <tr>
                 <td style="text-align: left;">
@@ -175,96 +178,78 @@
             </tr>
         </table>
 
+        <br>
         <hr>
+        <br>
 
         <h1>Mock Ups</h1>
         <table>
             <tr>
                 <td>
-                    <h2>Login Page</h2>
                     <img src="./Pictures/Mockups/Login.png" alt="Login Page">
                 </td>
                 <td>
-                    <h2>Dashboard</h2>
                     <img src="./Pictures/Mockups/Dashboard.png" alt="Dashboard">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h2>Workspace</h2>
                     <img src="./Pictures/Mockups/Workspace.png" alt="Workspace">
                 </td>
                 <td>
-                    <h2>Add Task</h2>
                     <img src="./Pictures/Mockups/Add-Task.png" alt="Add Task">
                 </td>
             </tr>
         </table>
 
+        <br>
         <hr>
+        <br>
 
         <h1>Algorithms</h1>
         <table>
             <tr>
                 <td>
-                    <h2>Work Breakdown Structure</h2>
                     <img src="./Pictures/Algorithms/WBS.png" alt="Work Breakdown Structure">
                 </td>
                 <td>
-                    <h2>Work Breakdown Structure: Preference Analysis</h2>
                     <img src="./Pictures/Algorithms/WBS-PA.png" alt="Work Breakdown Structure: Preference Analysis">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h2>Profile Creation</h2>
                     <img src="./Pictures/Algorithms/Profile.png" alt="Profile Creation">
                 </td>
                 <td>
-                    <h2>Notifications</h2>
-                    <img src="./Pictures/Algorithms/Notifications.png" alt="Notifications">
+                    <img src="./Pictures/Algorithms/Notification.png" alt="Notification">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h2>Calendar Import</h2>
                     <img src="./Pictures/Algorithms/Import.png" alt="Calendar Import">
                 </td>
                 <td>
-                    <h2>Calendar Export</h2>
                     <img src="./Pictures/Algorithms/Export.png" alt="Calendar Export">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h2>Add Task</h2>
                     <img src="./Pictures/Algorithms/Add-Task.png" alt="Add Task">
                 </td>
                 <td>
-                    <h2>Conflict Resolution</h2>
                     <img src="./Pictures/Algorithms/Conflict.png" alt="Conflict Resolution">
                 </td>
             </tr>
             <tr>
                 <td colspan="2">
-                    <h2>Automated Schedule Creation</h2>
                     <img style="width: 50%;" src="./Pictures/Algorithms/Automated-Creation.png" alt="Automated Schedule Creation">
                 </td>
             </tr>
         </table>
 
+        <br>
         <hr>
-
-        <h1>Database Design</h1>
-        <table>
-            <tr>
-                <td>
-                    <img style="width:50%;" src="./Pictures/Database.png" alt="Database Design">
-                </td>
-            </tr>
-        </table>
-
-        <hr>
+        <br>
 
         <h1>Real World Product vs Prototype</h1>
         <table>
