--- a/labs.html
+++ b/labs.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>CS 410 Gold Group: About Us</title>
+        <title>CS410 - Gold Group - Labs</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="schedule.css">
