--- a/references.html
+++ b/references.html
@@ -34,6 +34,12 @@
                 https://www.psychologytoday.com/us/blog/how-to-do-life/202112/4-causes-of-poor-time-management</a>
         </p>
 
+        <p class = "apa-reference">Prabhu, A. (2022, November 25). 
+            <em>Importance of scheduling tasks and its benefits.</em> Profit.co. Retrieved from
+            <a href="https://www.profit.co/blog/task-management/importance-of-scheduling-tasks-and-its-benefits/">
+                https://www.profit.co/blog/task-management/importance-of-scheduling-tasks-and-its-benefits/</a>
+        </p>
+
         <p class ="apa-reference">Richardson, B. (2022, October 26).
             <em>Time Management Statistics & Facts (New 2022 Research).</em> Acuity Training.
             <a href="https://www.acuitytraining.co.uk/news-tips/time-management-statistics-2022-research/">
