embeded Individual Lab1 pdf to the hyperlink in labs.html

--- a/labs.html
+++ b/labs.html
@@ -79,7 +79,7 @@
                 <td>
                     <h3>Xavier Jordan</h3>
                     <p>Link to Xavier's individual 
-                        <a href="./Documents" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/CS410-Lab1-Jordan.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
             </tr>
