--- a/labs.html
+++ b/labs.html
@@ -48,7 +48,7 @@
                 <td>
                     <h3>Jacinda Rosario</h3>
                     <p>Link to Jacinda's individual 
-                        <a href="./Documents/Lab 1 Individual - Jacinda Rosario" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/CS410-Lab1-Rosario.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
             </tr>
