updating labs.html

--- a/labs.html
+++ b/labs.html
@@ -40,7 +40,7 @@
                 <td>
                     <h3>Ashley Carter</h3>
                     <p>Link to Ashley's individual 
-                        <a href="./Documents" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/CS410-Lab1-Carter.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
             </tr>
