fixed file name spacing

--- a/labs.html
+++ b/labs.html
@@ -64,7 +64,7 @@
                 <td>
                     <h3>Kofi Amoah</h3>
                     <p>Link to Kofi's individual 
-                        <a href="./Documents/CS410-Lab1-Amoah.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/CS 410-Lab1-Amoah.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
             </tr>
