--- a/labs.html
+++ b/labs.html
@@ -72,7 +72,7 @@
                 <td>
                     <h3>Pablo Castaneda</h3>
                     <p>Link to Pablo's individual 
-                        <a href="./Documents" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
             </tr>
