--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>CS410 - Gold Group - Home</title>
+        <title>CS411W - Gold Group - Home</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="schedule.css">
@@ -22,7 +22,7 @@
 
         <h1>Schedule Puzzle</h1>
 
-        <h2>CS 410 Gold Group</h2>
+        <h2>CS411W Gold Group</h2>
 
         <p style="text-align: center;">Welcome to our project! <br> We are very cool</p>
        
