--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>CS410 - Gold Group - About Us</title>
+        <title>CS411W - Gold Group - About Us</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="schedule.css">
@@ -94,6 +94,25 @@
                         Xavier Jordan is a senior at Old Dominion University currently working on his Bachelor's Degree in
                         Computer Science. He has experience with Java, C++, and is currently learning Python. His interests
                         are music, video games, and Harry Potter.
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="" alt="Jake Austin">
+                    <br>
+                    <p>
+                        <b>Jake Austin</b><br>
+                        Bio
+                    </p>
+                </td>
+
+                <td>
+                    <img src="" alt="Ryan Tran">
+                    <br>
+                    <p>
+                        <b>Ryan Tran</b><br>
+                        Bio
                     </p>
                 </td>
             </tr>
