--- a/problem.html
+++ b/problem.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>CS410 - Gold Group - Problem</title>
+        <title>CS411W - Gold Group - Problem</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="schedule.css">
