edited bio for Ryan Tran

--- a/about-us.html
+++ b/about-us.html
@@ -112,7 +112,9 @@
                     <br>
                     <p>
                         <b>Ryan Tran</b><br>
-                        Bio
+                        Ryan Tran is a senior at Old Dominion University majoring in computer science. He is currently working at
+                        Geek Squad as a computer hardware technician. He has experience in C++, Java, and is learning Python. His 
+                        hobbies include watching anime, playing games, and spending money on unnecessary items.
                     </p>
                 </td>
             </tr>
