Added Bio Photo

--- a/about-us.html
+++ b/about-us.html
@@ -108,7 +108,7 @@
                 </td>
 
                 <td>
-                    <img src="" alt="Ryan Tran">
+                    <img src="./Pictures/Bio/Seflie Photo.jpg" alt="Ryan Tran">
                     <br>
                     <p>
                         <b>Ryan Tran</b><br>
