Added the DOCTYPE declaration to each html file

--- a/about-us.html
+++ b/about-us.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>CS411W - Gold Group - About Us</title>
@@ -32,7 +33,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="./Pictures/Bio/ashleypic.jpg"alt="Ashley Carter">
+                    <img src="./Pictures/Bio/ashleypic.jpg" alt="Ashley Carter">
                     <br>
                     <p>
                         <b>Ashley Carter</b><br>
