--- a/deliverables.html
+++ b/deliverables.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>CS411W - Gold Group - Deliverables</title>
@@ -30,10 +31,10 @@
         <table>
             <tr>
                 <td>
-                    <img src="./Pictures/Process-Flows/Current.png"alt="Current Process Flow">
+                    <img src="./Pictures/Process-Flows/Current.png" alt="Current Process Flow">
                 </td>
                 <td>
-                    <img src="./Pictures/Process-Flows/Solution.png"alt="Solution Process Flow">
+                    <img src="./Pictures/Process-Flows/Solution.png" alt="Solution Process Flow">
                 </td>
             </tr>
         </table>
@@ -46,7 +47,7 @@
             <tr>
                 <td>
                     <h1>Major Functional Component Diagram</h1>
-                    <img src="./Pictures/MFCD.png"alt="Major Functional Component Diagram">
+                    <img src="./Pictures/MFCD.png" alt="Major Functional Component Diagram">
                 </td>
                 <td>
                     <h1>Database Design</h1>
@@ -63,15 +64,15 @@
         <table>
             <tr>
                 <td colspan="2">
-                    <img style="width:50%;" src="./Pictures/Competition/Main.png"alt="Competition Matrix: Main Features">
+                    <img style="width:50%;" src="./Pictures/Competition/Main.png" alt="Competition Matrix: Main Features">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="./Pictures/Competition/Basic.png"alt="Competition Matrix: Basic Features">
+                    <img src="./Pictures/Competition/Basic.png" alt="Competition Matrix: Basic Features">
                 </td>
                 <td>
-                    <img src="./Pictures/Competition/Priority.png"alt="Competition Matrix: Prioritization Features">
+                    <img src="./Pictures/Competition/Priority.png" alt="Competition Matrix: Prioritization Features">
                 </td>
             </tr>
         </table>
