--- a/references.html
+++ b/references.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>CS411W - Gold Group - References</title>
@@ -41,7 +42,7 @@
         </p>
 
         <p class ="apa-reference">Richardson, B. (2022, October 26).
-            <em>Time Management Statistics & Facts (New 2022 Research).</em> Acuity Training.
+            <em>Time Management Statistics /& Facts (New 2022 Research).</em> Acuity Training.
             <a href="https://www.acuitytraining.co.uk/news-tips/time-management-statistics-2022-research/">
                 https://www.acuitytraining.co.uk/news-tips/time-management-statistics-2022-research/</a>
         </p>
