--- a/about-us.html
+++ b/about-us.html
@@ -100,11 +100,15 @@
             </tr>
             <tr>
                 <td>
-                    <img src="" alt="Jake Austin">
+                    <img src="./Pictures/Bio/JRA_ProfilePic.jpg" alt="Jake Austin">
                     <br>
                     <p>
                         <b>Jake Austin</b><br>
-                        Bio
+                        Jake Austin is a senior at Old Dominion University working in obtaining his Bachelor's Degree in 
+                        Computer Science and Minor in Cybersecurity and Electerial Computer Engneering. He transferred from 
+                        Tidewater Community College from 2017 and has experience with programs such as Unix and Eclipse. His 
+                        preferred coding langauges are C++ and Java. His hobbies are reaading, sketching, video games, 
+                        exercising, and cooking.
                     </p>
                 </td>
 
