Updated labs page

--- a/labs.html
+++ b/labs.html
@@ -29,19 +29,25 @@
         <h1>Lab 1</h1>
         <table>
             <tr>
-                <th><h2>Group</h2></th>
-                <th><h2>Individual</h2></th>
+                <th width="50%"><h2>Group</h2></th>
+                <th colspan="2"><h2>Individual</h2></th>
             </tr>
             <tr>
-                <td rowspan="6">
-                    <object data="./Documents/Lab1.pdf" width="100%" height="750px">
-                        <p>Unable to display PDF file. <a href="./Documents/Lab1.pdf">Download</a> instead.</p>
+                <td rowspan="4">
+                    <object data="./Documents/411W-Lab1-Outline-0905.pdf" width="100%" height="750px">
+                        <p>Unable to display PDF file. <a href="./Documents/411W-Lab1-Outline-0905.pdf">Download</a> instead.</p>
                     </object>
                 </td>
                 <td>
                     <h3>Ashley Carter</h3>
                     <p>Link to Ashley's individual 
                         <a href="./Documents/CS410-Lab1-Carter.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
+                </td>
+                <td>
+                    <h3>Pablo Castaneda</h3>
+                    <p>Link to Pablo's individual 
+                        <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
             </tr>
@@ -52,6 +58,12 @@
                         <a href="./Documents/CS410-Lab1-Rosario.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
+                <td>
+                    <h3>Xavier Jordan</h3>
+                    <p>Link to Xavier's individual 
+                        <a href="./Documents/CS410-Lab1-Jordan.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
+                </td>
             </tr>
             <tr>
                 <td>
@@ -59,6 +71,10 @@
                     <p>Link to Kayla's individual
                         <a href="./Documents/CS410-Lab1-Pineda.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
+                </td>
+                <td>
+                    <h3>Ryan Tran</h3>
+                    <p>TDA</p>
                 </td>
             </tr>
             <tr>
@@ -68,22 +84,17 @@
                         <a href="./Documents/CS 410-Lab1-Amoah.pdf" target="_blank" rel="noopener noreferrer">here</a>
                     </p>
                 </td>
-            </tr>
-            <tr>
                 <td>
-                    <h3>Pablo Castaneda</h3>
-                    <p>Link to Pablo's individual 
-                        <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">here</a>
-                    </p>
+                    <h3>Jake Austin</h3>
+                    <p>TDA</p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h3>Xavier Jordan</h3>
-                    <p>Link to Xavier's individual 
-                        <a href="./Documents/CS410-Lab1-Jordan.pdf" target="_blank" rel="noopener noreferrer">here</a>
-                    </p>
+                    <h3>Previous Versions</h3>
+                    <p><a href="./Documents/Lab1.pdf" target="_blank" rel="noopener noreferrer">410-Version 1</a></p>
                 </td>
+                
             </tr>
         </table>
 
