added deliverables drop down in nav bar

--- a/presentations.html
+++ b/presentations.html
@@ -13,7 +13,21 @@
             <a href="./index.html"><b>Home</b></a>
             <a href="./about-us.html">About Us</a>
             <a href="./problem.html">Societal Problem</a>
-            <a href="./deliverables.html">Deliverables</a>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a href="./deliverables.html" class="dropbtn">Deliverables</a>
+                </button>
+                <div class="dropdown-content">
+                    <a href="./deliverables.html#Process-Flows">Process Flows</a>
+                    <a href="./deliverables.html#MFCD">Major Functional Component Diagram</a>
+                    <a href="./deliverables.html#Database">Database Design</a>
+                    <a href="./deliverables.html#Competition">Competition Matrices</a>
+                    <a href="./deliverables.html#Risks">Risks</a>
+                    <a href="./deliverables.html#Mock-Ups">Mock Ups</a>
+                    <a href="./deliverables.html#Algorithms">Algorithms</a>
+                    <a href="./deliverables.html#RWP-vs-Prototype">RWP vs Prototype</a>
+                </div>
+            </div>
             <a href="./presentations.html">Presentations</a>
             <a href="./labs.html">Labs</a>
             <a href="./references.html">References</a>
