--- a/deliverables.html
+++ b/deliverables.html
@@ -18,13 +18,22 @@
             <a href="./index.html"><b>Home</b></a>
             <a href="./about-us.html">About Us</a>
             <a href="./problem.html">Societal Problem</a>
-            <a href="./deliverables.html">Deliverables</a>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a href="./deliverables.html" class="dropbtn">Deliverables</a>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
             <a href="./presentations.html">Presentations</a>
             <a href="./labs.html">Labs</a>
             <a href="./references.html">References</a>
         </div>
 
-        <h1>Process Flows</h1>
+        <h1 id="Process-Flows">Process Flows</h1>
         <table>
             <tr>
                 <td>
@@ -43,11 +52,11 @@
         <table>
             <tr>
                 <td>
-                    <h1>Major Functional Component Diagram</h1>
+                    <h1 id="MFCD">Major Functional Component Diagram</h1>
                     <img src="./Pictures/MFCD.png" alt="Major Functional Component Diagram">
                 </td>
                 <td>
-                    <h1>Database Design</h1>
+                    <h1 id="Database">Database Design</h1>
                     <img src="./Pictures/Database.png" alt="Database Design">
                 </td>
             </tr>
@@ -57,7 +66,7 @@
         <hr>
         <br>
 
-        <h1>Competition Matrices</h1>
+        <h1 id="Competition">Competition Matrices</h1>
         <table>
             <tr>
                 <td colspan="2">
@@ -78,7 +87,7 @@
         <hr>
         <br>
 
-        <h1>Risks</h1>
+        <h1 id="Risks">Risks</h1>
         <table>
             <tr>
                 <td style="text-align: left;">
@@ -180,7 +189,7 @@
         <hr>
         <br>
 
-        <h1>Mock Ups</h1>
+        <h1 id="Mock-Ups">Mock Ups</h1>
         <table>
             <tr>
                 <td>
@@ -204,7 +213,7 @@
         <hr>
         <br>
 
-        <h1>Algorithms</h1>
+        <h1 id="Algorithms">Algorithms</h1>
         <table>
             <tr>
                 <td>
@@ -249,7 +258,7 @@
         <hr>
         <br>
 
-        <h1>Real World Product vs Prototype</h1>
+        <h1 id="RWP-vs-Prototype">Real World Product vs Prototype</h1>
         <table>
             <tr>
                 <td>
