update deliverables drop down in nav bar

--- a/deliverables.html
+++ b/deliverables.html
@@ -23,9 +23,14 @@
                     <a href="./deliverables.html" class="dropbtn">Deliverables</a>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="./deliverables.html#Process-Flows">Process Flows</a>
+                    <a href="./deliverables.html#MFCD">Major Functional Component Diagram</a>
+                    <a href="./deliverables.html#Database">Database Design</a>
+                    <a href="./deliverables.html#Competition">Competition Matrices</a>
+                    <a href="./deliverables.html#Risks">Risks</a>
+                    <a href="./deliverables.html#Mock-Ups">Mock Ups</a>
+                    <a href="./deliverables.html#Algorithms">Algorithms</a>
+                    <a href="./deliverables.html#RWP-vs-Prototype">RWP vs Prototype</a>
                 </div>
             </div>
             <a href="./presentations.html">Presentations</a>
