fixed alignment of deliverables button

--- a/about-us.html
+++ b/about-us.html
@@ -19,8 +19,8 @@
             <a href="./about-us.html">About Us</a>
             <a href="./problem.html">Societal Problem</a>
             <div class="dropdown">
-                <button class="dropbtn">
-                    <a href="./deliverables.html" class="dropbtn">Deliverables</a>
+                <button class="dropbtn" 
+                    onclick="window.location.href='./deliverables.html';">Deliverables</a>
                 </button>
                 <div class="dropdown-content">
                     <a href="./deliverables.html#Process-Flows">Process Flows</a>
