fixed bold navbar

--- a/about-us.html
+++ b/about-us.html
@@ -15,8 +15,8 @@
 
     <body>
         <div class="navbar">
-            <a href="./index.html"><b>Home</b></a>
-            <a href="./about-us.html">About Us</a>
+            <a href="./index.html">Home</a>
+            <a href="./about-us.html"><b>About Us</b></a>
             <a href="./problem.html">Societal Problem</a>
             <div class="dropdown">
                 <button class="dropbtn" 
