--- a/deliverables.html
+++ b/deliverables.html
@@ -15,12 +15,12 @@
 
     <body>  
         <div class="navbar">
-            <a href="./index.html"><b>Home</b></a>
+            <a href="./index.html">Home</a>
             <a href="./about-us.html">About Us</a>
             <a href="./problem.html">Societal Problem</a>
             <div class="dropdown">
                 <button class="dropbtn" 
-                    onclick="window.location.href='./deliverables.html';">Deliverables</a>
+                    onclick="window.location.href='./deliverables.html';"><b>Deliverables</b></a>
                 </button>
                 <div class="dropdown-content">
                     <a href="./deliverables.html#Process-Flows">Process Flows</a>
