--- a/labs.html
+++ b/labs.html
@@ -15,7 +15,7 @@
 
     <body>
         <div class="navbar">
-            <a href="./index.html"><b>Home</b></a>
+            <a href="./index.html">Home</a>
             <a href="./about-us.html">About Us</a>
             <a href="./problem.html">Societal Problem</a>
             <div class="dropdown">
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <a href="./presentations.html">Presentations</a>
-            <a href="./labs.html">Labs</a>
+            <a href="./labs.html"><b>Labs</b></a>
             <a href="./references.html">References</a>
             </div>
 
