--- a/presentations.html
+++ b/presentations.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="navbar">
-            <a href="./index.html"><b>Home</b></a>
+            <a href="./index.html">Home</a>
             <a href="./about-us.html">About Us</a>
             <a href="./problem.html">Societal Problem</a>
             <div class="dropdown">
@@ -28,7 +28,7 @@
                     <a href="./deliverables.html#RWP-vs-Prototype">RWP vs Prototype</a>
                 </div>
             </div>
-            <a href="./presentations.html">Presentations</a>
+            <a href="./presentations.html"><b>Presentations</b></a>
             <a href="./labs.html">Labs</a>
             <a href="./references.html">References</a>
         </div>
