--- a/problem.html
+++ b/problem.html
@@ -10,9 +10,9 @@
 
     <body>
         <div class="navbar">
-            <a href="./index.html"><b>Home</b></a>
+            <a href="./index.html">Home</a>
             <a href="./about-us.html">About Us</a>
-            <a href="./problem.html">Societal Problem</a>
+            <a href="./problem.html"><b>Societal Problem</b></a>
             <div class="dropdown">
                 <button class="dropbtn" 
                     onclick="window.location.href='./deliverables.html';">Deliverables</a>
