--- a/references.html
+++ b/references.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="navbar">
-            <a href="./index.html"><b>Home</b></a>
+            <a href="./index.html">Home</a>
             <a href="./about-us.html">About Us</a>
             <a href="./problem.html">Societal Problem</a>
             <div class="dropdown">
@@ -30,7 +30,7 @@
             </div>
             <a href="./presentations.html">Presentations</a>
             <a href="./labs.html">Labs</a>
-            <a href="./references.html">References</a>
+            <a href="./references.html"><b>References</b></a>
         </div>
 
         <h1>References</h1>
