Updated Ryan lab to CS411 lab

--- a/labs.html
+++ b/labs.html
@@ -86,7 +86,9 @@
                 </td>
                 <td>
                     <h3>Ryan Tran</h3>
-                    <p>TDA</p>
+                    <p>Link to Ryan's individual
+                        <a href="./Documents/CS411W-Lab1v2-Tran.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
                 </td>
             </tr>
             <tr>
