--- a/labs.html
+++ b/labs.html
@@ -80,8 +80,10 @@
             <tr>
                 <td>
                     <h3>Kayla Pineda</h3>
-                    <p>Link to Kayla's individual
-                        <a href="./Documents/CS411W-Lab1v1-Pineda.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a href="./Documents/CS411W-Lab1v1-Pineda.pdf" target="_blank" rel="noopener noreferrer">CS410 Lab 1</a> <br>
+                        <a href="./Documents/Kayla/CS411W-Lab1v1-Pineda.pdf" target="_blank" rel="noopener noreferrer">Version 1</a> <br>
+                        <a href="./Documents/Kayla/CS411W-Lab1v2-Pineda.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
                 <td>
