--- a/labs.html
+++ b/labs.html
@@ -112,6 +112,79 @@
             </tr>
         </table>
 
+        <h1>Lab 2</h1>
+        <table>
+            <tr>
+                <th width="50%"><h2>Group</h2></th>
+                <th colspan="2"><h2>Individual</h2></th>
+            </tr>
+            <tr>
+                <td rowspan="4">
+                    <object data="./Documents/Lab2v2-Gold.pdf" width="100%" height="750px">
+                        <p>Unable to display PDF file. <a href="./Documents/Lab2v2-Gold.pdf">Download</a> instead.</p>
+                    </object>
+                </td>
+                <td>
+                    <h3>Ashley Carter</h3>
+                    <p>Link to Ashley's individual 
+                        <a href="./Documents/CS410-Lab1-Carter.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
+                </td>
+                <td>
+                    <h3>Pablo Castaneda</h3>
+                    <p>Link to Pablo's individual 
+                        <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Jacinda Rosario</h3>
+                    <p>Link to Jacinda's individual 
+                        <a href="./Documents/CS410-Lab1-Rosario.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
+                </td>
+                <td>
+                    <h3>Xavier Jordan</h3>
+                    <p>Link to Xavier's individual 
+                        <a href="./Documents/CS411W-Lab1v1-Jordan.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Kayla Pineda</h3>
+                    <p>
+                        <a href="./Documents/Kayla/CS411W-Lab2v1-Pineda.pdf" target="_blank" rel="noopener noreferrer">Version 1</a> <br>
+                        <a href="./Documents/Kayla/CS411W-Lab2v2-Pineda.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
+                    </p>
+                </td>
+                <td>
+                    <h3>Ryan Tran</h3>
+                    <p>Not in CS410 Group</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Kofi Amoah</h3>
+                    <p>Link to Kofi's individual 
+                        <a href="./Documents/CS 410-Lab1-Amoah.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    </p>
+                </td>
+                <td>
+                    <h3>Jake Austin</h3>
+                    <p>Not in CS410 Group</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Previous Versions</h3>
+                    <p><a href="./Documents/Lab2v1-Gold.pdf" target="_blank" rel="noopener noreferrer">Version 1</a></p>
+                </td>
+                
+            </tr>
+        </table>
+
     
         <footer>
             <br><br><hr>
