added labs 3 and 4

--- a/labs.html
+++ b/labs.html
@@ -185,6 +185,13 @@
             </tr>
         </table>
 
+        <h1>Labs 3 and 4</h1>
+        <p style="text-align: center;">
+            <a href="https://github.com/kaypineda/2023-Fall-CS411W-Gold-Prototype/wiki" target="_blank" rel="noopener noreferrer">
+                Link to Wiki
+            </a>
+        </p>
+
     
         <footer>
             <br><br><hr>
