added links to labs

--- a/labs.html
+++ b/labs.html
@@ -53,7 +53,9 @@
                 <td>
                     <h3>Ashley Carter</h3>
                     <p>Link to Ashley's individual 
-                        <a href="./Documents/CS410-Lab1-Carter.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/Ashley/CS410-Lab1-Carter.pdf" target="_blank" rel="noopener noreferrer">CS410 Lab 1</a><br>
+                        <a href="./Documents/Ashley/CS411W-Lab-1v1-Carter.pdf" target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a href="./Documents/Ashley/CS411W-Lab-1v2-Carter.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
                 <td>
@@ -127,7 +129,8 @@
                 <td>
                     <h3>Ashley Carter</h3>
                     <p>Link to Ashley's individual 
-                        <a href="./Documents/CS410-Lab1-Carter.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/Ashley/CS411W-Lab-2v1-Carter.pdf" target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a href="./Documents/Ashley/CS411W-Lab-2v2-Carter.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
                 <td>
