--- a/labs.html
+++ b/labs.html
@@ -72,8 +72,10 @@
                 </td>
                 <td>
                     <h3>Xavier Jordan</h3>
-                    <p>Link to Xavier's individual 
-                        <a href="./Documents/CS411W-Lab1v1-Jordan.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a href="./Documents/Xavier/CS410-Lab1-Jordan.pdf" target="_blank" rel="noopener noreferrer">CS410 Lab 1</a> <br>
+                        <a href="./Documents/Xavier/CS411W-Lab1v1-Jordan.pdf" target="_blank" rel="noopener noreferrer">Version 1</a> <br>
+                        <a href="./Documents/Xavier/CS411W-Lab1v2-Jordan.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
             </tr>
@@ -146,8 +148,9 @@
                 </td>
                 <td>
                     <h3>Xavier Jordan</h3>
-                    <p>Link to Xavier's individual 
-                        <a href="./Documents/CS411W-Lab1v1-Jordan.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a href="./Documents/Xavier/CS411W-Lab2v1-Jordan.pdf" target="_blank" rel="noopener noreferrer">Version 1</a> <br>
+                        <a href="./Documents/Xavier/CS411W-Lab2v2-Jordan.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
             </tr>
