--- a/labs.html
+++ b/labs.html
@@ -98,8 +98,10 @@
             <tr>
                 <td>
                     <h3>Kofi Amoah</h3>
-                    <p>Link to Kofi's individual 
-                        <a href="./Documents/CS 410-Lab1-Amoah.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a href="./Documents/CS 410-Lab1-Amoah.pdf" target="_blank" rel="noopener noreferrer">CS410 Lab 1</a>
+                        <a href="./Documents/Kofi/CS411W-Lab1-V1-Amoah.pdf" target="_blank" rel="noopener noreferrer">Version 1</a> <br>
+                        <a href="./Documents/Kofi/CS411W-Lab1-V2-Amoah.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
                 <td>
