--- a/labs.html
+++ b/labs.html
@@ -176,7 +176,8 @@
                 <td>
                     <h3>Kofi Amoah</h3>
                     <p>Link to Kofi's individual 
-                        <a href="./Documents/CS 410-Lab1-Amoah.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                        <a href="./Documents/Kofi/CS411W-Lab2-V1-Amoah.pdf" target="_blank" rel="noopener noreferrer">Version 1</a> <br>
+                        <a href="./Documents/Kofi/CS411W-Lab2-V2-Amoah.pdf" target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
                 <td>
