update lab template

--- a/labs.html
+++ b/labs.html
@@ -60,16 +60,20 @@
                 </td>
                 <td>
                     <h3>Pablo Castaneda</h3>
-                    <p>Link to Pablo's individual 
-                        <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">CS410 Lab1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <h3>Jacinda Rosario</h3>
-                    <p>Link to Jacinda's individual 
-                        <a href="./Documents/CS410-Lab1-Rosario.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a href="./Documents/CS410-Lab1-Rosario.pdf" target="_blank" rel="noopener noreferrer">CS410 Lab1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
                 <td>
@@ -92,7 +96,11 @@
                 </td>
                 <td>
                     <h3>Ryan Tran</h3>
-                    <p>Not in CS410 Group</p>
+                    <p>
+                        Not in CS410 Group<br>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
+                    </p>
                 </td>
             </tr>
             <tr>
@@ -106,7 +114,11 @@
                 </td>
                 <td>
                     <h3>Jake Austin</h3>
-                    <p>Not in CS410 Group</p>
+                    <p>
+                        Not in CS410 Group<br>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
+                    </p>
                 </td>
             </tr>
             <tr>
@@ -139,16 +151,18 @@
                 </td>
                 <td>
                     <h3>Pablo Castaneda</h3>
-                    <p>Link to Pablo's individual 
-                        <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <h3>Jacinda Rosario</h3>
-                    <p>Link to Jacinda's individual 
-                        <a href="./Documents/CS410-Lab1-Rosario.pdf" target="_blank" rel="noopener noreferrer">here</a>
+                    <p>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
                 <td>
@@ -169,7 +183,10 @@
                 </td>
                 <td>
                     <h3>Ryan Tran</h3>
-                    <p>Not in CS410 Group</p>
+                    <p>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
+                    </p>
                 </td>
             </tr>
             <tr>
@@ -182,7 +199,10 @@
                 </td>
                 <td>
                     <h3>Jake Austin</h3>
-                    <p>Not in CS410 Group</p>
+                    <p>
+                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a target="_blank" rel="noopener noreferrer">Version 2</a>
+                    </p>
                 </td>
             </tr>
             <tr>
