--- a/labs.html
+++ b/labs.html
@@ -62,7 +62,7 @@
                     <h3>Pablo Castaneda</h3>
                     <p>
                         <a href="./Documents/CS 410-Lab1-Castaneda.pdf" target="_blank" rel="noopener noreferrer">CS410 Lab1</a><br>
-                        <a target="_blank" rel="noopener noreferrer">Version 1</a><br>
+                        <a href="Documents/Pablo/Lab 1 v 1.pdf" target="_blank" rel="noopener noreferrer">Version 1</a><br>
                         <a target="_blank" rel="noopener noreferrer">Version 2</a>
                     </p>
                 </td>
